# cuda-mfcc-gmm

./: .gitignore  CMakeLists.txt  README.md
RunEnv/: all.list  all.tags  ubm.512.cfg  ubm.64.cfg  ubm.fromtrain.mfc.list  wav.list
RunEnv/wavs/: E10000001_vad.mfc  E10000002_vad.mfc  E10000003_vad.mfc  E10000004_vad.mfc  E10000005_vad.mfc  E10000006_vad.mfc  E10000007_vad.mfc  E10000008_vad.mfc  E10000009_vad.mfc  E10000010_vad.mfc  E10000011_vad.mfc  E10000012_vad.mfc  E10000013_vad.mfc  E10000014_vad.mfc  E10000015_vad.mfc  E10000016_vad.mfc  E10000017_vad.mfc  E10000018_vad.mfc  E10000019_vad.mfc  E10000020_vad.mfc  E10000021_vad.mfc  E10000022_vad.mfc  E10000023_vad.mfc  E10000024_vad.mfc  E10000025_vad.mfc  E10000026_vad.mfc  E10000027_vad.mfc  E10000028_vad.mfc  E10000029_vad.mfc  E10000030_vad.mfc  E10000031_vad.mfc  E10000032_vad.mfc  E10000033_vad.mfc  E10000034_vad.mfc  E10000035_vad.mfc  E10000036_vad.mfc  E10000037_vad.mfc  E10000038_vad.mfc  E10000039_vad.mfc  E10000040_vad.mfc  (+60 more)
gmm/: .CMakeLists.txt.swp  .GMMParam.h.swp  .kmean.cpp.swp  .kmean.cu.swp  .main.cpp.swp  CMakeLists.txt  Feat_comm.cpp  Feat_comm.h  GMMMixup.cpp  GMMMixup.h  GMMParam.cpp  GMMParam.h  GMMTrain.cpp  GMMTrain.cu  GMMTrain.h  comm_srlr.h  config.cpp  config.h  em_kernel.cu  em_kernel.h  kmean.cpp  kmean.cu  kmean.cu.bk2  kmean.h  kmean_kernel.cu  kmean_kernel.h  main.cpp  memory_srlr.cpp  memory_srlr.h  svm_feature_extract.cu  test_model.cpp  wtime.cpp  wtime.h
mfcc/: CMakeLists.txt  recorder.cpp  termPro_cuda_demo.cpp  termPro_demo.cpp
mfcc/Analysis/: AEPAnalysis.cpp  AEPAnalysis.h  BEPAnalysis.cpp  BEPAnalysis.h  CMakeLists.txt  DAEPAnalysis.cpp  DAEPAnalysis.h  EPAnalysis.cpp  EPAnalysis.h
mfcc/Capture/: AutoCapture.cpp  AutoCapture.h  CMakeLists.txt  Capture.cpp  Capture.h
mfcc/Configure/: CMakeLists.txt  ErrorCode.def  SerialFiles.cpp  SerialFiles.h  SpecificStateNum.def  alias.def  configure.h  configure_basic.h  configure_capture.h  configure_dtw.h  configure_feature.h  configure_hmm.h  continuous_speech.h  resource.h  srs.h  tool.cpp  tool.h
mfcc/Feature/: CMakeLists.txt  Feature.cpp  Feature.h  FeatureExtractor.cpp  FeatureExtractor.cu  FeatureExtractor.h  FeatureExtractorTool.cu  FeatureExtractorTool.h  mathtool.cpp  mathtool.h  pbcopy  wtime.cpp  wtime.h
mfcc/ThreadPool/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h
mfcc/data/: CMakeLists.txt  RawData.cpp  RawData.h  RawDataFile.cpp
mfcc/readwave/: CMakeLists.txt  readwave.cpp  readwave.h
mfcc/test/: CMakeLists.txt  test.cpp  test.h
