#set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; -std=c++11 -O3)

set (TERM_PRO_MAIN cpu_mfcc)
add_executable(${TERM_PRO_MAIN} termPro_demo.cpp)

set (TERM_PRO_CUDA_MAIN cuda_mfcc)
cuda_add_executable(${TERM_PRO_CUDA_MAIN} termPro_cuda_demo.cpp)

set (RECOREDER recorder)
add_executable(${RECOREDER} ${RECOREDER}.cpp)

set(ANALYSIS Analysis)
set(CAPTURE Capture)
set(FEATURE Feature)
set(TEST test)
set(CONFIGURE Configure)
set(READWAVE readwave)
set(DATA data)
set(THREADPOOL ThreadPool)
set(MFCC_CUDA MfccCuda)

ADD_DEFINITIONS(
    -std=c++11
)

cuda_include_directories ("${PROJECT_SOURCE_DIR}/mfcc/${TEST}")
cuda_include_directories ("${PROJECT_SOURCE_DIR}/mfcc/${FEATURE}")
cuda_include_directories ("${PROJECT_SOURCE_DIR}/mfcc/${CAPTURE}")
cuda_include_directories ("${PROJECT_SOURCE_DIR}/mfcc/${ANALYSIS}")
cuda_include_directories ("${PROJECT_SOURCE_DIR}/mfcc/${CONFIGURE}")
cuda_include_directories ("${PROJECT_SOURCE_DIR}/mfcc/${READWAVE}")
cuda_include_directories ("${PROJECT_SOURCE_DIR}/mfcc/${DATA}")
cuda_include_directories ("${PROJECT_SOURCE_DIR}/mfcc/${THREADPOOL}")

include_directories ("${PROJECT_SOURCE_DIR}/mfcc/${TEST}")
include_directories ("${PROJECT_SOURCE_DIR}/mfcc/${FEATURE}")
include_directories ("${PROJECT_SOURCE_DIR}/mfcc/${CAPTURE}")
include_directories ("${PROJECT_SOURCE_DIR}/mfcc/${ANALYSIS}")
include_directories ("${PROJECT_SOURCE_DIR}/mfcc/${CONFIGURE}")
include_directories ("${PROJECT_SOURCE_DIR}/mfcc/${READWAVE}")
include_directories ("${PROJECT_SOURCE_DIR}/mfcc/${DATA}")
include_directories ("${PROJECT_SOURCE_DIR}/mfcc/${THREADPOOL}")

add_subdirectory (${TEST})
add_subdirectory (${FEATURE})
add_subdirectory (${CAPTURE})
add_subdirectory (${ANALYSIS})
add_subdirectory (${CONFIGURE})
add_subdirectory (${READWAVE})
add_subdirectory (${DATA})
add_subdirectory (${THREADPOOL})


target_link_libraries(${TERM_PRO_CUDA_MAIN} ${MFCC_CUDA})
target_link_libraries(${TERM_PRO_CUDA_MAIN} ${TEST})
target_link_libraries(${TERM_PRO_CUDA_MAIN} ${CAPTURE})
target_link_libraries(${TERM_PRO_CUDA_MAIN} ${ANALYSIS})
target_link_libraries(${TERM_PRO_CUDA_MAIN} ${DATA})
target_link_libraries(${TERM_PRO_CUDA_MAIN} ${CONFIGURE})
target_link_libraries(${TERM_PRO_CUDA_MAIN} ${THREADPOOL})
target_link_libraries(${TERM_PRO_CUDA_MAIN} ${READWAVE})
target_link_libraries(${TERM_PRO_CUDA_MAIN} portaudio)
target_link_libraries(${TERM_PRO_CUDA_MAIN} pthread)
target_link_libraries(${TERM_PRO_MAIN} ${FEATURE})
target_link_libraries(${TERM_PRO_MAIN} ${TEST})
target_link_libraries(${TERM_PRO_MAIN} ${CAPTURE})
target_link_libraries(${TERM_PRO_MAIN} ${ANALYSIS})
target_link_libraries(${TERM_PRO_MAIN} ${DATA})
target_link_libraries(${TERM_PRO_MAIN} ${CONFIGURE})
target_link_libraries(${TERM_PRO_MAIN} ${THREADPOOL})
target_link_libraries(${TERM_PRO_MAIN} ${READWAVE})
target_link_libraries(${TERM_PRO_MAIN} portaudio)
target_link_libraries(${TERM_PRO_MAIN} pthread)

target_link_libraries(${RECOREDER} ${CAPTURE})
target_link_libraries(${RECOREDER} ${ANALYSIS})
target_link_libraries(${RECOREDER} ${DATA})
target_link_libraries(${RECOREDER} ${CONFIGURE})
target_link_libraries(${RECOREDER} ${READWAVE})
target_link_libraries(${RECOREDER} portaudio)
target_link_libraries(${RECOREDER} pthread)

install (TARGETS ${TERM_PRO_MAIN} DESTINATION ${PROJECT_SOURCE_DIR}/RunEnv)

install (TARGETS ${TERM_PRO_CUDA_MAIN} DESTINATION ${PROJECT_SOURCE_DIR}/RunEnv)
